fix issue with dropdown menu on safari

--- a/src/styles/general.less
+++ b/src/styles/general.less
@@ -161,7 +161,7 @@ input::placeholder {
 .header-top {
   display: flex;
   justify-content: space-between;
-  height: 60%;
+  height: 200%;
 }
 
 .header-title {
